# llm-tests

./: .gitignore  AGENTS.md  README.md  chroma_ingest.py  knowledge_ingest.py  pyproject.toml  rag_tools.py  requirements.txt  setup.py
data_preparation/: __init__.py  documents.py  prepare_data.py  test_prepare_data.py  version_one_backlog_item.py
examples/joust_game/: joust.html  joust.py
examples/monster_pipeline/: MonsterScience.ipynb  create_embeddings.py  query_process.py
knowledge_server/: __init__.py  basic_knowledge.json
llm_pipeline/: __init__.py  evaluate_batch.py  llm_methods.py  llm_methods_usage.md  pipeline.py  plugin_loader.py  process_pipeline.py  test_evaluate_batch.py  vector_store.py
llm_pipelines.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp/: __init__.py  dnd_mcp.py  general_query_mcp copy.py  general_query_mcp.py  simple_mcp.py
monster_pipeline/: ExampleNotebook.ipynb  MonsterScience.ipynb  TestDataGen.ipynb  create_embeddings.py  query_process.py
monster_pipeline/data/: modifiers.csv  monsters_with_embeddings.pkl  processed_monsters-x.csv  processed_monsters.csv
plugins/: example_plugin.py
samples/: ask_llm.py  ingest_chroma.py  query_chroma.py  store.csv
samples/sourceText/: sample.txt
samples/store/: docstore.json  (+1 more)
temp/: store.csv
tests/: sample.txt  store.pkl  store.pkl.csv  test_chroma_ingest.py  test_data_pipeline.csv  test_data_pipeline_embeddings.pkl  test_joust.py  test_knowledge_ingest.py  test_knowledge_server.py  test_pipeline.py  test_rag_tools.py
tools/: __init__.py  utils.py
(+13 files in other folders)
