[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-pipelines"
version = "0.1.0"
description = "A reusable library for LLM-based pipelines."
authors = [{name = "Bob Foreman"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openai",
    "numpy",
    "requests",
]

[project.urls]
Homepage = "https://github.com/foreman3/llm-tests"
